--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -2,6 +2,14 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
+        android:id="@+id/action_sync"
+        android:title="Sync with device"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/action_categories"
+        android:title="Categories"
+        app:showAsAction="never" />
+    <item
         android:id="@+id/action_reset_db"
         android:title="Reset Database"
         app:showAsAction="never" />
