--- a/app/src/main/res/layout/dialog_restore_state.xml
+++ b/app/src/main/res/layout/dialog_restore_state.xml
@@ -14,8 +14,8 @@
         android:layout_height="?attr/actionBarSize"
         android:background="?attr/colorSurface"
         app:title="@string/restore_state_dialog_title"
-        app:titleTextAppearance="?attr/textAppearanceHeadline6"
-        app:titleTextColor="?android:attr/textColorPrimary"
+        app:titleTextAppearance="@style/TextAppearance.Material3.HeadlineSmall"
+        app:titleTextColor="?attr/colorOnSurface"
         app:elevation="0dp"/>
 
     <View
@@ -47,7 +47,7 @@
                 android:padding="32dp"
                 android:text="@string/no_saved_states"
                 android:textAlignment="center"
-                android:textAppearance="?attr/textAppearanceBody1"
+                android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                 android:visibility="gone"
                 tools:visibility="visible" />
 
@@ -84,7 +84,7 @@
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/buttonCancel"
-            style="@style/Widget.MaterialComponents.Button.TextButton"
+            style="@style/Widget.Material3.Button.TextButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/cancel"
@@ -94,7 +94,7 @@
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/buttonRestore"
-            style="@style/Widget.MaterialComponents.Button"
+            style="@style/Widget.Material3.Button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
@@ -102,7 +102,7 @@
             android:text="@string/restore"
             app:icon="@drawable/ic_restore"
             app:iconGravity="textStart"
-            app:iconTint="@android:color/white"
+            app:iconTint="?attr/colorOnPrimary"
             app:iconPadding="8dp" />
 
     </LinearLayout>
